--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5",
         "maatwebsite/excel": "~2.1.0",
+        "milon/barcode": "6.0",
         "mpdf/mpdf": "~6.1",
         "phenx/php-font-lib": "0.5.2",
         "predis/predis": "^1.1",
